heder: try to fix heder on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -228,14 +228,14 @@ li {
 /* sections  */
 /* header stiles */
 .header {
-  position: sticky;
-  position: -webkit-sticky;
+  position: fixed;
   top: 0;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.75rem; }
+  padding: 0.75rem;
+  z-index: 1000; }
 
 .header__leftside {
   display: flex; }
