--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -1,14 +1,14 @@
 /* header stiles */
 
 .header {
-  position: sticky;
-  position: -webkit-sticky;
+  position: fixed;
   top: 0;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0.75rem;
+  z-index: 1000;
 }
 
 .header__leftside {
